fix: resolve layout issue

--- a/styles/global.css
+++ b/styles/global.css
@@ -79,9 +79,6 @@ main:after {
 .glassmorphism {
   @apply rounded-lg bg-clip-padding backdrop-filter backdrop-blur-md bg-opacity-50 bg-[#d6d6d6];
 }
-.active_btn {
-  @apply bg-[rgba(255,255,255,0.4)] rounded-lg;
-}
 
 @media screen and (max-width: 1280px) {
   .mobile_glassmorphism {
@@ -90,8 +87,15 @@ main:after {
 }
 
 .nav_link {
-  @apply flex items-center hover:bg-[rgba(255,255,255,0.2)] hover:opacity-90 gap-4 rounded-lg justify-start text-[#0b0c15] px-4 py-2.5 font-semibold;
+  @apply flex items-center hover:bg-[rgba(255,255,255,0.4)] hover:opacity-90 gap-4 rounded-lg justify-start text-[#0b0c15] px-4 py-2.5 font-semibold;
 }
 .mobile_nav {
   @apply max-xl:w-11/12 max-xl:mx-auto;
+}
+
+.text_link {
+  @apply text-[#0b0c15] font-bold hover:underline decoration-blue-900;
+}
+.btn {
+  @apply hover:underline decoration-blue-900;
 }
